src/objects/Alliance_BD_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Alliance_BD_Opportunity__c</fullName>
        <label>Alliance/BD Opportunity</label>
        <referenceTo>Alliance_BD_Opportunity__c</referenceTo>
        <relationshipLabel>Alliance/BD Activities</relationshipLabel>
        <relationshipName>Alliance_BD_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Logged_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logged By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alliance_BD_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alliance/Business Development</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Alliance/BD Activity</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alliance/BD Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>